--- a/aboutme.html
+++ b/aboutme.html
@@ -8,43 +8,29 @@
 </head>
 
 <body>
-	
+
 <div class="header">
 	<div class="Name">
 		<h1>Robert Craig</h1>
 	</div>
-	<div class="Links">
+	<div class="navbar">
 		<h3>About</h3>
 		<h3>Portfolio</h3>
 		<h3>Contact</h3>
 	</div>
 </div>
-<br>
-<br>
-<br>
-<div>
-<div id="MainBody">
-	<div id="Portfolio">Portfolio
-	<div id="Box1">Box1
-	<div id="Box2">Box2
-	<div id="Box3">Box3
-	<div id="Box4">Box4
+<div class="about"><h1>About</h1>
+	<p>Hi Everyone!  This is my <strong>VERY</strong> first ever webpage (built from good ol' fashioned HTML and CSS). Two things of which I've never knew about a few months ago. I can easily see how overwhelming and complex it can seem at first but then again, it's important to remind oneself that no mistake is ever permanent. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned and thanks for visiting! :)</p>
+	<p>Oh and I would also like to give a big shout out to all of the staff at RCB as they have been extremely encouraging and helpful throughout the program so far.</p>
 </div>
-	
 <div class="social">
 	<h2>Connect</h2>
 	<a href="https://www.facebook.com/"><img src="images/Facebook.png"; style="width; 75px; height: 75px"></a>
 	<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
 	<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
 </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="Footer">This is my very first ever webpage. :)</div>
+
+<div class="footer"></div>
+
 </body>
+</html>
