--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robert Craig's Webpage</title>
-  <link rel="stylesheet" type="text/css" href="Robert Craig Webpage-Portfolio.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
