--- a/portfolio.html
+++ b/portfolio.html
@@ -4,47 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <title>Robert Craig's Webpage</title>
-  <link rel="stylesheet" type="text/css" href="Robert Craig Webpage-Portfolio.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-	
+
 <div class="header">
-	<div class="Name">
-		<h1>Robert Craig</h1>
-	</div>
-	<div class="Links">
-		<h3>About</h3>
-		<h3>Portfolio</h3>
-		<h3>Contact</h3>
-	</div>
+	<div class="Name"><h1>Robert Craig</h1></div>
+			
+	<div class="navbar"><h3>About | Portfolio | Contact</h3></div>
 </div>
-<br>
-<br>
-<br>
-<div>
-<div id="MainBody">
-	<div id="Portfolio">Portfolio
-	<div id="Box1">Box1
-	<div id="Box2">Box2
-	<div id="Box3">Box3
-	<div id="Box4">Box4
+
+<div class="MainBody">
+	<div id="Portfolio">
+	<div id="Box1"><img src="images/InstagramImage.jpg" style="width: 225px; height: 225px"></div>
+	<div id="Box2"></div>
+	<div id="Box3"></div>
+	<div id="Box4"></div>
 </div>
+
 	
-<div class="social">
-	<h2>Connect</h2>
-	<a href="https://www.facebook.com/"><img src="images/Facebook.png"; style="width; 75px; height: 75px"></a>
+<div class="social"><h1>Connect</h1>
+	<br>
+	<br>
+	<a href="https://www.facebook.com/"><img src="images/Facebook.png"; style="width: 75px; height: 75px"></a>
 	<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
 	<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
+
 </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="Footer">This is my very first ever webpage. :)</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div id="Footer"><h2>This is my very first ever webpage! :)</h2></div>
+
 </body>
