--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robert Craig's Webpage</title>
-  <link rel="stylesheet" type="text/css" href="Robert Craig Webpage-Portfolio.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 	<div class="Name">
 		<h1>Robert Craig</h1>
 	</div>
-	<div class="Links">
+	<div class="navbar">
 		<h3>About</h3>
 		<h3>Portfolio</h3>
 		<h3>Contact</h3>
