--- a/portfolio.html
+++ b/portfolio.html
@@ -12,22 +12,21 @@
 <div class="header">
 	<div class="Name"><h1>Robert Craig</h1></div>
 			
-	<div class="navbar"><h3>About | Portfolio | Contact</h3></div>
+	<div class="navbar"><h3><a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></h3></div>
 </div>
-
 <div class="MainBody">
 	<div id="Portfolio">
-	<div id="Box1"><img src="images/InstagramImage.jpg" style="width: 225px; height: 225px"></div>
-	<div id="Box2"></div>
-	<div id="Box3"></div>
-	<div id="Box4"></div>
+	<div id="Box1"><img src="images/Instagram Image" style="width: 225px; height: 225px"></div>
+	<div id="Box2"><img src="images/Profile Image" style="width: 225px; height: 225px"></div>
+	<div id="Box3"><img src="images/rutgers" style="width: 225px; height: 225px"></div>
+	<div id="Box4"><img src="images/Baseball.jpg" style="width: 225px; height: 225px"></div>
 </div>
 
 	
 <div class="social"><h1>Connect</h1>
 	<br>
 	<br>
-	<a href="https://www.facebook.com/"><img src="images/Facebook.png"; style="width: 75px; height: 75px"></a>
+	<a href="https://www.facebook.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
 	<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
 	<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
 
@@ -35,12 +34,9 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div id="Footer"><h2>This is my very first ever webpage! :)</h2></div>
+<div id="Footer"><h3>Welcome to my very first webpage!</h3></div>
 
 </body>
+</div>
+</body>
+</html>
