--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <div class="header">
 	<div class="Name"><h1>Robert Craig</h1></div>
 			
-	<div class="navbar"><h3><a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></h3></div>
+	<div class="navbar"><h3><a href="index.html"><font color="#4aaaa5">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></font></h3></div>
 </div>
 <div class="MainBody">
 	<div id="Portfolio">
