--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 </div>
 <div class="MainBody">
 <div class="about">
-	<font color="#4aaaa5">About Me</font>
+<font size="14" color="#4aaaa5">About Me</font>
+	<br>
+	<br>
 	<div style="overflow: auto;">
 	<img src="images/Profile Image" style="float: left; width:150px; height: 150px">
-	<div style="float: left;"><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I've never knew about a few months ago. I can easily see how overwhelming and complex it can seem at first but then again, it's important to remind oneself that no mistake is ever permanent. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned and thanks for visiting! :)</p>
-	<p>Oh and I would also like to give a big shout out to all of the staff at RCB as they have been extremely encouraging and helpful throughout the program so far.</p>
+	<div style="float: right;"><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I've never knew about a few months ago. I can easily see how overwhelming and complex it can seem at first but then again, it's important to remind oneself that no mistake is ever permanent. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned for continued updates and thanks for visiting! :)</p>
+	<p>Oh and I would also like to give a big shout out to all of the staff at RCB as they have been extremely encouraging and helpful throughout the program.</p>
 </div>
 </div>
 <div class="social">
@@ -29,7 +31,9 @@
 	<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
 	<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
 </div>
+</div>
+</div>
 
-<div class="Footer"><h3>Welcome to my very first webpage!</h3></div>
+<div id="Footer"><h3>Welcome to my very first webpage!</h3></div>
 </body>
 </html>
