--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <div class="header">
 	<div class="Name"><h1>Robert Craig</h1></div>
 			
-	<div class="navbar"><h3><a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></h3></div>
+	<div class="navbar"><h3>
+		<div id="buttons">
+			<a id="aa" href="index.html">About</a> | <a id="b" href="portfolio.html">Portfolio</a> | <a id="c" href="contact.html">Contact</a>
+		</div>
+	</h3>
+</div>
 </div>
 <div class="MainBody">
 <div class="about">
@@ -20,8 +25,8 @@
 	<br>
 	<br>
 	<div style="overflow: auto;">
-	<img src="images/Profile Image" style="float: left; width:150px; height: 150px">
-	<div style="float: right;"><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I've never knew about a few months ago. I can easily see how overwhelming and complex it can seem at first but then again, it's important to remind oneself that no mistake is ever permanent. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned for continued updates and thanks for visiting! :)</p>
+	<img id="a" src="images/Profile Image" style="float: left; width:150px; height: 150px">
+	<div><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I've never knew about a few months ago. I can easily see how overwhelming and complex it can seem at first but then again, it's important to remind oneself that no mistake is ever permanent. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned for continued updates and thanks for visiting! :)</p>
 	<p>Oh and I would also like to give a big shout out to all of the staff at RCB as they have been extremely encouraging and helpful throughout the program.</p>
 </div>
 </div>
