--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 	<div class="navbar"><h3><a href="index.html"><font color="#4aaaa5">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></font></h3></div>
 </div>
 <div class="MainBody">
-	<div id="Portfolio">
+	<div class id="Portfolio"><h>Portfolio</h>
 	<div id="Box1"><img src="images/Instagram Image" style="width: 225px; height: 225px"></div>
 	<div id="Box2"><img src="images/Profile Image" style="width: 225px; height: 225px"></div>
 	<div id="Box3"><img src="images/rutgers" style="width: 225px; height: 225px"></div>
