--- a/contact.html
+++ b/contact.html
@@ -10,26 +10,26 @@
 <body>
 
 <div class="header">
-	<div class="Name">
-		<h1>Robert Craig</h1>
-	</div>
-	<div class="navbar">
-		<h3>About</h3>
-		<h3>Portfolio</h3>
-		<h3>Contact</h3>
-	</div>
+	<div class="Name"><h1>Robert Craig</h1></div>
+			
+	<div class="navbar"><h3>
+		<div id="buttons">
+			<a id="aa" href="index.html">About</a> | <a id="b" href="portfolio.html">Portfolio</a> | <a id="c" href="contact.html">Contact</a>
+		</div>
+	</h3>
+</div>
 </div>
 <div class="about"><h1>Contact Box w/ field submission boxes</h1>
 	
 </div>
-<div class="social">
+<div id="asocial" class="social">
 	<h2>Connect</h2>
-	<a href="https://www.facebook.com/"><img src="images/Facebook.png"; style="width; 75px; height: 75px"></a>
+	<a href="https://stackoverflow.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
 	<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
 	<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
 </div>
-
-<div class="footer"></div>
-
+</div>
+</div>
+<div id="Footer"><h3>Welcome to my very first webpage!</h3></div>
 </body>
 </html>
