--- a/contact.html
+++ b/contact.html
@@ -12,24 +12,38 @@
 <div class="header">
 	<div class="Name"><h1>Robert Craig</h1></div>
 			
-	<div class="navbar"><h3>
-		<div id="buttons">
-			<a id="aa" href="index.html">About</a> | <a id="b" href="portfolio.html">Portfolio</a> | <a id="c" href="contact.html">Contact</a>
-		</div>
-	</h3>
+	<div class="navbar">
+		<h3>
+			<div id="buttons">
+				<a id="aa" href="index.html">About</a> | <a id="b" href="portfolio.html">Portfolio</a> | <a id="c" href="contact.html">Contact</a>
+			</div>
+		</h3>
+	</div>
 </div>
-</div>
-<div class="about"><h1>Contact Box w/ field submission boxes</h1>
-	
+<div class="MainBody">
+	<div class="ContactMe"><h2>Contact Me</h2>
+<br>
+		<form action="/action_page.php">
+  			Name<br><br>
+  			<input type="text" name="firstname" value=""><br><br>
+  			Email<br><br>
+  			<input type="text" name="lastname" value=""><br><br>
+  			Message<br><br>
+            <input type="Message" name="Message value=""><br>
+  	        <input type="submit" value="Submit">
+		</form>
+
+	</div>
 </div>
 <div id="asocial" class="social">
 	<h2>Connect</h2>
-	<a href="https://stackoverflow.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
-	<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
-	<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
+		<a href="https://stackoverflow.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
+		<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
+		<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
 </div>
-</div>
-</div>
-<div id="Footer"><h3>Welcome to my very first webpage!</h3></div>
+
+
+<div id="Footer">Robert Craig Copyright 2017</div>
+
 </body>
 </html>
