--- a/index.html
+++ b/index.html
@@ -2,43 +2,44 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Robert Craig's Webpage</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  	<meta charset="UTF-8">
+  	<title>Robert Craig's Webpage</title>
+  	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 
-<div class="header">
-	<div class="Name"><h1>Robert Craig</h1></div>
+	<div class="header">
+		<div class="Name"><h1>Robert Craig</h1></div>
 			
-	<div class="navbar"><h3>
-		<div id="buttons">
-			<a id="aa" href="index.html">About</a> | <a id="b" href="portfolio.html">Portfolio</a> | <a id="c" href="contact.html">Contact</a>
-		</div>
-	</h3>
-</div>
-</div>
+			<div class="navbar">		
+				<div id="buttons">
+					<h3><a id="aa" href="index.html">About</a> | <a id="b" href="portfolio.html">Portfolio</a> | <a id="c" href="contact.html">Contact</a></h3>
+				</div>
+			</div>
+	</div>
 <div class="MainBody">
-<div class="about">
-<font size="14" color="#4aaaa5">About Me</font>
+	<div class="about">
+		<font color="#4aaaa5">About Me</font>
 	<br>
 	<br>
-	<div style="overflow: auto;">
-	<img id="a" src="images/Profile Image" style="float: left; width:150px; height: 150px">
-	<div><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I've never knew about a few months ago. I can easily see how overwhelming and complex it can seem at first but then again, it's important to remind oneself that no mistake is ever permanent. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned for continued updates and thanks for visiting! :)</p>
-	<p>Oh and I would also like to give a big shout out to all of the staff at RCB as they have been extremely encouraging and helpful throughout the program.</p>
-</div>
-</div>
-<div class="social">
-	<h2>Connect</h2>
-	<a href="https://stackoverflow.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
-	<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
-	<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
-</div>
-</div>
-</div>
+			<div style="overflow: auto;">
+				<img id="a" src="images/Profile Image" style="float: left; width:150px; height: 150px">
+				<div><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I've never knew about a few months ago. I can easily see how overwhelming and complex it can seem at first but then again, it's important to remind oneself that no mistake is ever permanent. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned for continued updates and thanks for visiting! :)</p>
 
-<div id="Footer"><h3>Welcome to my very first webpage!</h3></div>
+				<p>Oh and I would also like to give a big shout out to all of the staff at RCB as they have been extremely encouraging and helpful throughout the program.</p>
+				</div>
+			</div>
+		
+		<div id="asocial">
+			<h2>Connect</h2>
+				<a href="https://stackoverflow.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
+				<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
+				<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
+			</div>
+		</div>
+	</div>
+
+<div id="Footer">Robert Craig Copyright 2017</div>
 </body>
 </html>
