--- a/portfolio.html
+++ b/portfolio.html
@@ -21,14 +21,15 @@
 	<div id="Box3"><img src="images/rutgers" style="width: 225px; height: 225px"></div>
 	<div id="Box4"><img src="images/Baseball.jpg" style="width: 225px; height: 225px"></div>
 </div>
-<div class="social"><h1>Connect</h1>
-	<a href="https://www.facebook.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
-	<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
-	<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
+<div id="asocial" class="social">
+	<h2>Connect</h2>
+		<a href="https://www.facebook.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
+		<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
+		<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
 
 </div>
 </div>
-<div id="Footer"><h3>Welcome to my very first webpage!</h3></div>
+<div id="Footer">Robert Craig Copyright 2017</div>
 
 </body>
 </div>
