--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 	<div class="header">
-		<div class="Name"><h1>Robert Craig</h1></div>
+		<div class="Name"><strong>Robert Craig</strong></div>
 			
 			<div class="navbar">		
 				<div id="buttons">
@@ -20,14 +20,12 @@
 	</div>
 <div class="MainBody">
 	<div class="about">
-		<font color="#4aaaa5">About Me</font>
-	<br>
-	<br>
+		<div id="aboutmetitle"><h2>About Me</h2></div>	
 			<div style="overflow: auto;">
 				<img id="a" src="images/Profile Image" style="float: left; width:150px; height: 150px">
-				<div><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I've never knew about a few months ago. I can easily see how overwhelming and complex it can seem at first but then again, it's important to remind oneself that no mistake is ever permanent. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned for continued updates and thanks for visiting! :)</p>
+				<div><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I had only heard about in passing but in only a matter of weeks, I can certainly see how overwhelming and complex it may initially seem. But then again, it's important to remind oneself that learning anything new never comes easy. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned for continued updates and thanks for visiting! :)</p>
 
-				<p>Oh and I would also like to give a big shout out to all of the staff at RCB as they have been extremely encouraging and helpful throughout the program.</p>
+				<p>Oh and I would also like to give a big shout out to all of the staff at RCB as they have been extremely encouraging and helpful throughout the program: John, Tom, Evan, Arron, Peter and anyone else I'm missing. Thanks everyone!</p>
 				</div>
 			</div>
 		
@@ -39,7 +37,7 @@
 			</div>
 		</div>
 	</div>
-
+</div>
 <div id="Footer">Robert Craig Copyright 2017</div>
 </body>
 </html>
