--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,15 @@
 
 <body>
 
-<div class="header">
-	<div class="Name"><h1>Robert Craig</h1></div>
+	<div class="header">
+		<div class="Name"><strong>Robert Craig</strong></div>
 			
-	<div class="navbar"><h3><a href="index.html"><font color="#4aaaa5">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></font></h3></div>
-</div>
+			<div class="navbar">		
+				<div id="buttons">
+					<h3><a id="aa" href="index.html">About</a> | <a id="b" href="portfolio.html">Portfolio</a> | <a id="c" href="contact.html">Contact</a></h3>
+				</div>
+			</div>
+	</div>
 <div class="MainBody">
 	<div class id="Portfolio"><h>Portfolio</h>
 	<div id="Box1"><img src="images/Instagram Image" style="width: 225px; height: 225px"></div>
