--- a/contact.html
+++ b/contact.html
@@ -2,48 +2,42 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Robert Craig's Webpage</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  	<meta charset="UTF-8">
+  	<title>Robert Craig's Webpage</title>
+  	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-
-<div class="header">
-	<div class="Name"><h1>Robert Craig</h1></div>
+	<div class="header">
+		<div class="Name"><strong>Robert Craig</strong></div>
 			
-	<div class="navbar">
-		<h3>
-			<div id="buttons">
-				<a id="aa" href="index.html">About</a> | <a id="b" href="portfolio.html">Portfolio</a> | <a id="c" href="contact.html">Contact</a>
+			<div class="navbar">
+				<div id="buttons">
+					<h3><a id="aa" href="index.html">About</a> | <a id="b" href="portfolio.html">Portfolio</a> | <a id="c" href="contact.html">Contact</a></h3>
+				</div>
 			</div>
-		</h3>
 	</div>
-</div>
 <div class="MainBody">
 	<div class="ContactMe"><h2>Contact Me</h2>
-<br>
+		<br>
 		<form action="/action_page.php">
   			Name<br><br>
   			<input type="text" name="firstname" value=""><br><br>
   			Email<br><br>
   			<input type="text" name="lastname" value=""><br><br>
   			Message<br><br>
-            <input type="Message" name="Message value=""><br>
+            <input type="Message" name="Message value=""><br><br>
   	        <input type="submit" value="Submit">
 		</form>
-
 	</div>
 </div>
-<div id="asocial" class="social">
+<div id="socialcontact">
 	<h2>Connect</h2>
 		<a href="https://stackoverflow.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
 		<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
 		<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
 </div>
 
-
 <div id="Footer">Robert Craig Copyright 2017</div>
-
 </body>
 </html>
