--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,6 @@
 		<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
 		<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
 </div>
-
-<div id="Footer">Robert Craig Copyright 2017</div>
+<div id="ContactFooter">Robert Craig Copyright 2017</div>
 </body>
 </html>
