--- a/portfolio.html
+++ b/portfolio.html
@@ -19,11 +19,12 @@
 			</div>
 	</div>
 <div class="MainBody">
-	<div class id="Portfolio"><h>Portfolio</h>
-	<div id="Box1"><img src="images/Instagram Image" style="width: 225px; height: 225px"></div>
-	<div id="Box2"><img src="images/Profile Image" style="width: 225px; height: 225px"></div>
-	<div id="Box3"><img src="images/rutgers" style="width: 225px; height: 225px"></div>
-	<div id="Box4"><img src="images/Baseball.jpg" style="width: 225px; height: 225px"></div>
+	<div class id="Portfolio"><h2>Portfolio</h2>
+	<div id="Box1"><img src="images/gorilla.jpg" style="width: 175px; height: 175px"></div>
+	<div id="Box2"><img src="images/lambo.jpg" style="width: 175px; height: 175px"></div>
+	<div id="Box3"><img src="images/soccer.jpg" style="width: 175px; height: 175px"></div>
+	<div id="Box4"><img src="images/veggies.jpg" style="width: 175px; height: 175px"></div>
+</div>
 </div>
 <div id="asocial" class="social">
 	<h2>Connect</h2>
