--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div id="aboutmetitle"><h2>About Me</h2></div>	
 			<div style="overflow: auto;">
 				<img id="a" src="images/Profile Image" style="float: left; width:150px; height: 150px">
-				<div><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I had only heard about in passing but in only a matter of weeks, I can certainly see how overwhelming and complex it may initially seem. But then again, it's important to remind oneself that learning anything new never comes easy. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned for continued updates and thanks for visiting! :)</p>
+				<div><p>Hi Everyone!  This is my inaugural webpage (built from good ol' fashioned HTML and CSS). Two things of which I had only heard about in passing but in only a matter of weeks, I can certainly see how overwhelming and complex it may initially seem. But then again, it's important to remind oneself that learning anything new never comes easy. I intend to continue to improve upon this site as I become more and more adept at website construction. Please stay tuned for continued updates and thanks for visiting!</p>
 
 				<p>Oh and I would also like to give a big shout out to all of the staff at RCB as they have been extremely encouraging and helpful throughout the program: John, Tom, Evan, Arron, Peter and anyone else I'm missing. Thanks everyone!</p>
 				</div>
