--- a/portfolio.html
+++ b/portfolio.html
@@ -18,15 +18,42 @@
 				</div>
 			</div>
 	</div>
+
+
 <div class="MainBody">
 	<div class id="Portfolio"><h2>Portfolio</h2>
-	<div id="Box1"><img src="images/gorilla.jpg" style="width: 175px; height: 175px"></div>
-	<div id="Box2"><img src="images/lambo.jpg" style="width: 175px; height: 175px"></div>
-	<div id="Box3"><img src="images/soccer.jpg" style="width: 175px; height: 175px"></div>
-	<div id="Box4"><img src="images/veggies.jpg" style="width: 175px; height: 175px"></div>
+
+
+	<div class='wrapper' id="Box1"><img src="images/gorilla.jpg" style="width: 175px; height: 175px">
+		<div class='description'>
+			<p class='description_content'>Koko!</p>
+		</div>
+	</div>
+ 
+	<div class='wrapper' id="Box2"><img src="images/lambo.jpg" style="width: 175px; height: 175px">
+		<div class='description'>
+			<p class='description_content'>Lambo!</p>
+		</div>
+	</div>
+
+
+	<div class='wrapper' id="Box3"><img src="images/soccer.jpg" style="width: 175px; height: 175px">
+		<div class='description'>
+			<p class='description_content'><strong>Nice Kicks!</strong></p>
+		</div>
+	</div>
+ 
+	<div class='wrapper' id="Box4"><img src="images/veggies.jpg" style="width: 175px; height: 175px">
+		<div class='description'>
+			<p class='description_content'><strong>Veggies!</strong></p>
+		</div>
+	</div>
+
 </div>
 </div>
-<div id="asocial" class="social">
+
+
+<div id="portfoliosocial">
 	<h2>Connect</h2>
 		<a href="https://www.facebook.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
 		<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
