--- a/portfolio.html
+++ b/portfolio.html
@@ -24,26 +24,26 @@
 	<div class id="Portfolio"><h2>Portfolio</h2>
 
 
-	<div class='wrapper' id="Box1"><img src="images/gorilla.jpg" style="width: 175px; height: 175px">
+	<div class='wrapper' id="Box1"><img src="images/gorilla.jpg" alt="Smiley face" style="width: 175px; height: 175px">
 		<div class='description'>
-			<p class='description_content'>Koko!</p>
+			<p class='description_content2'>Koko!</p>
 		</div>
 	</div>
  
-	<div class='wrapper' id="Box2"><img src="images/lambo.jpg" style="width: 175px; height: 175px">
+	<div class='wrapper' id="Box2"><img src="images/lambo.jpg" alt="Smiley face" style="width: 175px; height: 175px">
 		<div class='description'>
-			<p class='description_content'>Lambo!</p>
+			<p class='description_content2'>Lambo!</p>
 		</div>
 	</div>
 
 
-	<div class='wrapper' id="Box3"><img src="images/soccer.jpg" style="width: 175px; height: 175px">
+	<div class='wrapper' id="Box3"><img src="images/soccer.jpg" alt="Smiley face" style="width: 175px; height: 175px">
 		<div class='description'>
 			<p class='description_content'><strong>Nice Kicks!</strong></p>
 		</div>
 	</div>
  
-	<div class='wrapper' id="Box4"><img src="images/veggies.jpg" style="width: 175px; height: 175px">
+	<div class='wrapper' id="Box4"><img src="images/veggies.jpg" alt="Smiley face" style="width: 175px; height: 175px">
 		<div class='description'>
 			<p class='description_content'><strong>Veggies!</strong></p>
 		</div>
@@ -55,15 +55,12 @@
 
 <div id="portfoliosocial">
 	<h2>Connect</h2>
-		<a href="https://www.facebook.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
-		<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
-		<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
+		<a href="https://stackoverflow.com/"><img src="images/stack overflow.png" alt="Smiley face" style="width: 75px; height: 75px"></a>
+		<a href="https://github.com/"><img src="images/GitHub.png" alt="Smiley face"  style="width: 75px; height: 75px"></a>
+		<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg" alt="Smiley face" style="width: 75px; height: 75px"></a>
 
 </div>
-</div>
-<div id="Footer">Robert Craig Copyright 2017</div>
+<div id="PortfolioFooter">Robert Craig Copyright 2017</div>
 
-</body>
-</div>
 </body>
 </html>
