--- a/contact.html
+++ b/contact.html
@@ -19,23 +19,22 @@
 	</div>
 <div class="MainBody">
 	<div class="ContactMe"><h2>Contact Me</h2>
-		<br>
 		<form action="/action_page.php">
   			Name<br><br>
-  			<input type="text" name="firstname" value=""><br><br>
+  			<input type="text" name="Name" value="Name"><br><br>
   			Email<br><br>
-  			<input type="text" name="lastname" value=""><br><br>
+  			<input type="text" name="Email" value="Email"><br><br>
   			Message<br><br>
-            <input type="Message" name="Message value=""><br><br>
+            <input type="Message" name="Message" value="Message"><br><br>
   	        <input type="submit" value="Submit">
 		</form>
 	</div>
 </div>
 <div id="socialcontact">
 	<h2>Connect</h2>
-		<a href="https://stackoverflow.com/"><img src="images/stack overflow.png"; style="width: 75px; height: 75px"></a>
-		<a href="https://github.com/"><img src="images/GitHub.png" style="width: 75px; height: 75px"></a>
-		<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg"; style="width: 75px; height: 75px;"></a>
+		<a href="https://stackoverflow.com/"><img src="images/stack overflow.png" alt="Smiley face" style="width: 75px; height: 75px"></a>
+		<a href="https://github.com/"><img src="images/GitHub.png" alt="Smiley face" style="width: 75px; height: 75px"></a>
+		<a href="https://www.linkedin.com/jobs/?trk=uno-choose-jobs&dl=no"><img src="images/LinkedIn.svg" alt="Smiley face" style="width: 75px; height: 75px"></a>
 </div>
 <div id="ContactFooter">Robert Craig Copyright 2017</div>
 </body>
